--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,22 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Sarah WR</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Sarah's Homemade Python Blog</a></h1>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
+            <p>published: 02.06.2018, 15:45</p>
             <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Hello, world! I guess I have to type that, right?.</p>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
+            <p>published: 02.06.2018, 15:52</p>
             <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+            <p>This feels very powerful, but I must admit that I still have no idea what I'm doing. How could I do this without a tutorial or a coach? In any case, this is the farthest I've ever gotten in coding and that is pretty damn exciting. :P.</p>
         </div>
     </body>
 </html>
