--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,11 +7,15 @@
             <h1><a href="/">Sarah's Homemade Python Blog</a></h1>
         </div>
 
+      {% for post in posts %}
         <div>
-            <p>published: 02.06.2018, 15:45</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Hello, world! I guess I have to type that, right?.</p>
+
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+
         </div>
+      {% endfor %}
 
         <div>
             <p>published: 02.06.2018, 15:52</p>
